--- a/css/_links.scss
+++ b/css/_links.scss
@@ -3,18 +3,21 @@
 	font-size: 1.2em;
 	letter-spacing: 2px;
 	text-decoration: none;
-	padding: 26px 0px;
+	padding: 8px 8px;
+	margin: 18px 0;
 	color: $gray;
 	transition: color 0.2s;
 
-	&--top {
+	&--top,
+	&--footer {
 		@extend .link;
 		display: block;
 		text-transform: uppercase;
 		@include tablet {
 			font-size: 0.8em;
-			margin-right: 3em;
-			padding: 8px 0px;
+			margin: 0;
+			margin-right: 2.4em;
+			padding: 8px 8px;
 		}
 
 		&:hover {
@@ -22,7 +25,15 @@
 			text-decoration: underline;
 		}
 	}
-
+	&--footer {
+		font-size: 0.8em;
+		margin: 0;
+		padding: 0.5em;
+		@include mobile {
+			display: inline-block;
+			margin: 0 1em;
+		}
+	}
 	&--case {
 		@extend .link;
 		color: $green-dark;
@@ -39,7 +50,10 @@
 		}
 	}
 }
-
+.link--top.active {
+	color: $red;
+	border: 1px dashed $red;
+}
 .button {
 	text-decoration: none;
 	padding: 1em 2em;
@@ -66,6 +80,7 @@
 		align-self: center;
 		margin-top: 2em;
 		text-transform: capitalize;
+		background-color: $red;
 		@include tablet {
 			padding: 0.8em 2em;
 			margin-top: 0;
@@ -106,13 +121,15 @@
 	height: 25px;
 	text-align: center;
 	text-decoration: none;
+	border: 1px dashed transparent;
 	border-radius: 6px;
 	box-sizing: unset;
 	@include transition;
 	color: $green-dark;
 	&:hover {
-		//color: rgba(255, 255, 255, 0.7);
-		background-color: $red;
+		color: $red;
+		//background-color: $red;
+		//border: 1px dashed $red;
 	}
 }
 
