--- a/css/_projects.scss
+++ b/css/_projects.scss
@@ -28,6 +28,7 @@
 			flex-flow: column nowrap;
 			background-color: white;
 			box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
+			border: 1px dashed transparent;
 			counter-increment: slide-number;
 			transition: all 0.3s;
 
@@ -43,7 +44,8 @@
 			}
 
 			&:hover {
-				box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+				box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+				border: 1px dashed $red;
 			}
 
 			&:hover .item__header {
@@ -58,7 +60,9 @@
 			}
 			&:hover .item__list {
 				opacity: 1;
-				transform: translateY(-25px);
+				transform: translateY(-30px);
+			}
+			&:hover .item__image {
 			}
 		}
 
@@ -87,6 +91,7 @@
 				text-transform: capitalize;
 				user-select: none;
 				opacity: 1;
+				margin-top: 1.5em;
 				transition: opacity 0.2s;
 			}
 			p {
@@ -108,12 +113,7 @@
 		background-color: white;
 		z-index: 1;
 		opacity: 1;
-		transition: transform 0.2s $transition-func, opacity 0.2s $transition-func;
-
-		img {
-			border-radius: 8px;
-			background-color: white;
-		}
+		@include transition;
 	}
 }
 
@@ -129,7 +129,7 @@
 	margin-top: 0em;
 	background-color: white;
 	opacity: 0;
-	transform: translateY(20px);
+	transform: translateY(0px);
 	transition: transform 0.2s $transition-func, opacity 0.2s $transition-func;
 
 	li {
