--- a/css/main.css
+++ b/css/main.css
@@ -566,6 +566,7 @@ main {
   background-color: white;
   -webkit-box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
           box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
+  border: 1px dashed transparent;
   counter-increment: slide-number;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -583,8 +584,9 @@ main {
 }
 
 .case-study-section .project__container .item:hover {
-  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  border: 1px dashed #fa7978;
 }
 
 .case-study-section .project__container .item:hover .item__header {
@@ -604,8 +606,8 @@ main {
 
 .case-study-section .project__container .item:hover .item__list, .case-study-section .project__container .item:hover .item__list--links {
   opacity: 1;
-  -webkit-transform: translateY(-25px);
-          transform: translateY(-25px);
+  -webkit-transform: translateY(-30px);
+          transform: translateY(-30px);
 }
 
 .case-study-section .project__container .item__header {
@@ -647,6 +649,7 @@ main {
       -ms-user-select: none;
           user-select: none;
   opacity: 1;
+  margin-top: 1.5em;
   -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
@@ -675,15 +678,8 @@ main {
   background-color: white;
   z-index: 1;
   opacity: 1;
-  -webkit-transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-.case-study-section .item__image img {
-  border-radius: 8px;
-  background-color: white;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .animate {
@@ -703,8 +699,8 @@ main {
   margin-top: 0em;
   background-color: white;
   opacity: 0;
-  -webkit-transform: translateY(20px);
-          transform: translateY(20px);
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
   -webkit-transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
