--- a/css/_projects.scss
+++ b/css/_projects.scss
@@ -14,8 +14,8 @@
 		max-width: 1000px;
 		margin: 8em auto 5em;
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-
+		grid-template-columns: repeat(auto-fit, minmax(280px, 280px));
+		justify-content: center;
 		row-gap: 1.25em;
 		column-gap: 2.5em;
 		counter-reset: slide-number;
