--- a/css/main.css
+++ b/css/main.css
@@ -544,8 +544,11 @@ main {
   margin: 8em auto 5em;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(280px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  -ms-grid-columns: (minmax(280px, 280px))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(280px, 280px));
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   row-gap: 1.25em;
   -webkit-column-gap: 2.5em;
           column-gap: 2.5em;
